now loads nodes into the db

--- a/src/definition/_test/definitions2.yaml
+++ b/src/definition/_test/definitions2.yaml
@@ -6,3 +6,6 @@ Definitions:
         Name: "Name of company"
         Type: "String"
         IsRequired: 1
+
+  Workload:
+    Description: "A workload"
